2015-03-31  Renato Silva  <br.renatosilva@gmail.com>

	* net.cc (cygwin_gethostname): Fix buffer size error handling.

2015-03-31  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (pwdgrp::fetch_account_from_windows): Don't allow fully
	qualified Windows account names (domain\user or user@domain).

2015-03-31  Corinna Vinschen  <corinna@vinschen.de>

	* localtime.cc (tzset_unlocked): Export as _tzset_unlocked.

2015-03-30  Yaakov Selkowitz  <yselkowi@redhat.com>

	* common.din (__gnu_basename): Export.
	* path.cc (__gnu_basename): New function.

2015-03-30  Corinna Vinschen  <corinna@vinschen.de>

	* cygheap.h (cygheap_domain_info::add_domain): Add prototype.
	* uinfo.cc (cygheap_domain_info::add_domain): New method.
	(pwdgrp::fetch_account_from_windows): Try to add domain explicitely
	if it was not in the original list of trusted domains and go ahead
	rather than bailing out.  Add comment to explain why.

2015-03-30  Corinna Vinschen  <corinna@vinschen.de>

	* cygtls.h (struct _cygtls): Convert thread_context to type CONTEXT.
	* exceptions.cc (_cygtls::signal_debugger): Use sizeof (CONTEXT) for
	size of CONTEXT copied for GDB's digestion.
	* include/cygwin/signal.h: Add a preliminary comment.

2015-03-25  Corinna Vinschen  <corinna@vinschen.de>

	* include/sys/termios.h: Add CMIN and CTIME.
	* fhandler_termios.cc (fhandler_termios::tcinit): Use CMIN and CTIME.

2015-03-25  Takashi Yano  <takashi.yano@nifty.ne.jp>

	* tty.h (class tty_min): Remove variable "write_error" to which any
	errors are not currently set at anywhere.
	(class tty): Add variable "column" for handling ONOCR.
	* tty.cc (tty::init): Add initialization code for variable "column".
	* fhandler.h (class fhandler_pty_master): Remove variable "need_nl"
	which is not necessary any more. "need_nl" was needed by OPOST process
	in fhandler_pty_master::process_slave_output().
	(class fhandler_pty_common): Add function process_opost_output() for
	handling post processing for OPOST in write process.